[tool.poetry]
name = "pytorch-classes"
version = "0.1.0"
description = ""
authors = ["Rajat Nigam <rajatnigam89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.0"
black = "^24.10.0"
matplotlib = "^3.9.2"
ipdb = "^0.13.13"
tqdm = "^4.67.0"
sentencepiece = "^0.2.0"
wandb = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
